--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -188,25 +188,25 @@ socialIcons:
 
 # 友情链接设置
 # Friend links setting
-# linksSets:
-#   # Fontawsome图标名称
-#   # Icon name in Font Awesome
-#   # See: https://fontawesome.com/
-#   icon: fa fa-globe
-#   # 显示标题
-#   # Show title
-#   title: 友情链接
-#   # 可选值： block | inline
-#   # Available values: block | inline
-#   layout: inline
+linksSets:
+  # Fontawsome图标名称
+  # Icon name in Font Awesome
+  # See: https://fontawesome.com/
+  icon: fa fa-globe
+  # 显示标题
+  # Show title
+  title: 友情链接
+  # 可选值： block | inline
+  # Available values: block | inline
+  layout: inline
 
 # 友情链接地址
 # 用法： `Key: 显示名称 || 链接地址`
 # Links of your friends
 # Usage: `Key: name || permalink`
-links: 
-  link0: Hugo-NexT || https://gitee.com/hugo-next/hugo-theme-next
-  link1: 凡梦星尘空间站 || https://lisenhui.cn
+# links: 
+#   link0: Hugo-NexT || https://gitee.com/hugo-next/hugo-theme-next
+#   link1: 凡梦星尘空间站 || https://lisenhui.cn
 
 # 文章目录显示
 # Table of Contents in the Sidebar
