--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -164,7 +164,7 @@ siteState:
 socials: 
   social0: Github || https://github.com/yyqq188 || fab fa-github
   #social1: E-Mail || mailto:yourname@gmail.com || fa fa-envelope
-  social2: 本站 || https:// || fa fa-book
+  social2: 本站 || https://zhiblog.top || fa fa-book
   #Google: https://plus.google.com/yourname || fab fa-google
   #Twitter: https://twitter.com/yourname || fab fa-twitter
   #FB Page: https://www.facebook.com/yourname || fab fa-facebook
@@ -204,9 +204,9 @@ linksSets:
 # 用法： `Key: 显示名称 || 链接地址`
 # Links of your friends
 # Usage: `Key: name || permalink`
-# links: 
-#   link0: Hugo-NexT || https://gitee.com/hugo-next/hugo-theme-next
-#   link1: 凡梦星尘空间站 || https://lisenhui.cn
+links: 
+  link0: Hugo-NexT || https://gitee.com/hugo-next/hugo-theme-next
+  link1: 凡梦星尘空间站 || https://lisenhui.cn
 
 # 文章目录显示
 # Table of Contents in the Sidebar
@@ -263,9 +263,9 @@ footer:
   # Powered by Hugo & NexT
   powered: true
 
-  国内 ICP 备案和公安网备信息
-  Beian ICP and gongan information for Chinese users. 
-  See: https://beian.miit.gov.cn, http://www.beian.gov.cn
+  # 国内 ICP 备案和公安网备信息
+  # Beian ICP and gongan information for Chinese users. 
+  # See: https://beian.miit.gov.cn, http://www.beian.gov.cn
   beian:
     enable: true
     # ICP 备案的具体信息
@@ -275,8 +275,8 @@ footer:
     # 公安网备案号
     gonganNum: 31011402009770
 
-  站点支持供应商列表
-  Vendors list who support website. 
+  # 站点支持供应商列表
+  # Vendors list who support website. 
   vendors:
     enable: true
     # 支持说明
