--- a/.github/workflows/sync-2-gitee.yml
+++ b/.github/workflows/sync-2-gitee.yml
@@ -11,7 +11,8 @@ jobs:
       - name: Sync to Gitee
         uses: wearerequired/git-mirror-action@master
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
+          # SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY }}
+          SSH_PRIVATE_KEY: ""
         with:
           source-repo: git@github.com:hugo-next/hugo-theme-next-starter.git
           destination-repo: git@gitee.com:hugo-next/hugo-theme-next-starter.git
