--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -474,7 +474,7 @@ githubBanner:
   enable: true
   # 你的 Github 仓库地址
   # Your repository url on Github.
-  permalink: https://github.com/hugo-next
+  permalink: https://github.com/yyqq188
   # 关注说明
   # Show this title when cursor move on.
   title: Follow me on GitHub
