--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -134,7 +134,7 @@ sidebar:
 avatar:
   # 设置显示头像的相对路径
   # Replace the default image and set the url here.
-  url: /imgs/yyqq188_avatar.png
+  url: /imgs/yyqq188_avatar.jpeg
   # 开启头像的圆形显示效果
   # If true, the avatar will be displayed in circle.
   rounded: true
