--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -340,26 +340,26 @@ postFooter:
 
 # 捐赠信息设置
 # Donate (Sponsor) settings.
-rewardSets:
-  # 是否开启捐赠按钮，开启后将在每个文章页面底部显示
-  # If true, a donate button will be displayed 
-  # in every article by default.
-  enable: true
-  # 是否开启捐赠方式的动画效果
-  # If true, the donate type title will with animation.
-  animation: true
-  # 捐赠信息的描述，支持 HTML 语法
-  # Comment for donate and suppport HTML syntax
-  comment: '<i class="fa-solid fa-mug-hot"></i>请我喝杯咖啡吧 ヾ(^▽^*)))'
-  # 捐赠方式
-  # 用例： `名称:图像地址`
-  # Donate type
-  # Usage: `name:image url`
-  reward:
-    wechatpay: /imgs/wechat-pay.png
-    alipay: /imgs/ali-pay.png
-    #paypal: /images/paypal.png
-    #bitcoin: /images/bitcoin.png
+# rewardSets:
+#   # 是否开启捐赠按钮，开启后将在每个文章页面底部显示
+#   # If true, a donate button will be displayed 
+#   # in every article by default.
+#   enable: true
+#   # 是否开启捐赠方式的动画效果
+#   # If true, the donate type title will with animation.
+#   animation: true
+#   # 捐赠信息的描述，支持 HTML 语法
+#   # Comment for donate and suppport HTML syntax
+#   comment: '<i class="fa-solid fa-mug-hot"></i>请我喝杯咖啡吧 ヾ(^▽^*)))'
+#   # 捐赠方式
+#   # 用例： `名称:图像地址`
+#   # Donate type
+#   # Usage: `name:image url`
+#   reward:
+#     wechatpay: /imgs/wechat-pay.png
+#     alipay: /imgs/ali-pay.png
+#     #paypal: /images/paypal.png
+#     #bitcoin: /images/bitcoin.png
 
 # 提供其它订阅站点文章的方式
 # 用例： `key: 名称 || 链接（图像地址）|| icon名称`
@@ -711,36 +711,36 @@ waline:
 # 更多配置信息请参考：https://giscus.app
 # Giscus comments system
 # For more information: https://giscus.app
-# giscus:
-#   # Github 仓库地址，格式：用户名/仓库名称
-#   # Github repository owner and name
-#   repo: username/repo-name
-#   # Giscus 生成的仓库 Id
-#   # Generate repository Id from Giscus
-#   repoId: #<repo-id>
-#   # 讨论区的分类名称
-#   # Github discussions category
-#   category: Comments
-#   # 讨论区分类 ID
-#   # Generate category Id from Giscus
-#   categoryId: #<category-id>
-#   # 帖子上的反应将会显示在评论前
-#   # The reactions for post will be shown before the comments
-#   reactions: false
-#   # 将元数据定期被发送到父页面（被嵌入的页面或控制台，用于调试）
-#   # Metadata will be sent periodically to the parent window
-#   emit: false
-#   # 评论输入框的位置，可选值： top | bottom
-#   # Aavilable value: top | bottom
-#   # 讨论区帖子标题，可选值： pathname | url | title | og:title | 自定义
-#   # Available values: pathname | url | title | og:title | custom
-#   mapping: title
-#   # 评论输入框的位置，可选值： top | bottom
-#   # Aavilable value: top | bottom
-#   inputPosition: top
-#   # 主题可选值： light | light_high_contrast | light_protanopia | light_tritanopia | dark | dark_high_contrast | dark_protanopia | dark_tritanopia | dark_dimmed | transparent_dark | preferred_color_scheme
-#   # Available values: light | light_high_contrast | light_protanopia | light_tritanopia | dark | dark_high_contrast | dark_protanopia | dark_tritanopia | dark_dimmed | transparent_dark | preferred_color_scheme
-#   theme: preferred_color_scheme
+giscus:
+  # Github 仓库地址，格式：用户名/仓库名称
+  # Github repository owner and name
+  repo: username/repo-name
+  # Giscus 生成的仓库 Id
+  # Generate repository Id from Giscus
+  repoId: #<repo-id>
+  # 讨论区的分类名称
+  # Github discussions category
+  category: Comments
+  # 讨论区分类 ID
+  # Generate category Id from Giscus
+  categoryId: #<category-id>
+  # 帖子上的反应将会显示在评论前
+  # The reactions for post will be shown before the comments
+  reactions: false
+  # 将元数据定期被发送到父页面（被嵌入的页面或控制台，用于调试）
+  # Metadata will be sent periodically to the parent window
+  emit: false
+  # 评论输入框的位置，可选值： top | bottom
+  # Aavilable value: top | bottom
+  # 讨论区帖子标题，可选值： pathname | url | title | og:title | 自定义
+  # Available values: pathname | url | title | og:title | custom
+  mapping: title
+  # 评论输入框的位置，可选值： top | bottom
+  # Aavilable value: top | bottom
+  inputPosition: top
+  # 主题可选值： light | light_high_contrast | light_protanopia | light_tritanopia | dark | dark_high_contrast | dark_protanopia | dark_tritanopia | dark_dimmed | transparent_dark | preferred_color_scheme
+  # Available values: light | light_high_contrast | light_protanopia | light_tritanopia | dark | dark_high_contrast | dark_protanopia | dark_tritanopia | dark_dimmed | transparent_dark | preferred_color_scheme
+  theme: preferred_color_scheme
 
 
 # ---------------------------------------------------------------
