--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -205,8 +205,8 @@ linksSets:
 # Links of your friends
 # Usage: `Key: name || permalink`
 links: 
-  link0: Hugo-NexT || https://gitee.com/hugo-next/hugo-theme-next
-  link1: 凡梦星尘空间站 || https://lisenhui.cn
+  link0: yyqq188 || https://github.com/yyqq188
+  # link1: 凡梦星尘空间站 || https://lisenhui.cn
 
 # 文章目录显示
 # Table of Contents in the Sidebar
@@ -261,7 +261,7 @@ footer:
 
   # 显示 Hugo 和 NexT 支持
   # Powered by Hugo & NexT
-  powered: true
+  powered: false
 
   # 国内 ICP 备案和公安网备信息
   # Beian ICP and gongan information for Chinese users. 
@@ -658,15 +658,15 @@ comments:
 # Waline comments system
 # More info seee: https://waline.js.org/
 waline:
-  pageView: true
-  comment: true
+  pageView: false
+  comment: false
   placeholder: "请文明发言哟 ヾ(≧▽≦*)o"
   sofa: "快来发表你的意见吧 (≧∀≦)ゞ"
   emoji: false
   imgUploader: false
   wordLimit: 200
   requiredMeta: ['nick', 'mail']
-  reaction: true
+  reaction: false
   reactionText: [ '点赞', '踩一下', '得意', '不屑', '尴尬', '睡觉']
   reactionTitle: "你认为这篇文章怎么样？"
   # 请注意换成个人的 Waline Server 服务器地址
