--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -657,7 +657,7 @@ comments:
 # 更多配置信息请参考：https://waline.js.org/
 # Waline comments system
 # More info seee: https://waline.js.org/
-# waline:
+waline:
 #   pageView: true
 #   comment: true
 #   placeholder: "请文明发言哟 ヾ(≧▽≦*)o"
@@ -671,8 +671,9 @@ comments:
 #   reactionTitle: "你认为这篇文章怎么样？"
 #   # 请注意换成个人的 Waline Server 服务器地址
 #   # Please replace this with your waline server URL
-#   serverURL: https://walinejs.comment.lithub.cc
-
+  # serverURL: https://walinejs.comment.lithub.cc
+  serverURL: https://xxxx
+  
 # Artalk 评论插件
 # 更多配置信息请参考：https://artalk.js.org
 # Artalk comments system
