--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -657,7 +657,7 @@ comments:
 # 更多配置信息请参考：https://waline.js.org/
 # Waline comments system
 # More info seee: https://waline.js.org/
-waline:
+# waline:
 #   pageView: true
 #   comment: true
 #   placeholder: "请文明发言哟 ヾ(≧▽≦*)o"
@@ -671,9 +671,8 @@ waline:
 #   reactionTitle: "你认为这篇文章怎么样？"
 #   # 请注意换成个人的 Waline Server 服务器地址
 #   # Please replace this with your waline server URL
-  # serverURL: https://walinejs.comment.lithub.cc
-  serverURL: https://xxxx
-  
+#   serverURL: https://walinejs.comment.lithub.cc
+
 # Artalk 评论插件
 # 更多配置信息请参考：https://artalk.js.org
 # Artalk comments system
@@ -712,36 +711,36 @@ waline:
 # 更多配置信息请参考：https://giscus.app
 # Giscus comments system
 # For more information: https://giscus.app
-giscus:
-  # Github 仓库地址，格式：用户名/仓库名称
-  # Github repository owner and name
-  repo: username/repo-name
-  # Giscus 生成的仓库 Id
-  # Generate repository Id from Giscus
-  repoId: #<repo-id>
-  # 讨论区的分类名称
-  # Github discussions category
-  category: Comments
-  # 讨论区分类 ID
-  # Generate category Id from Giscus
-  categoryId: #<category-id>
-  # 帖子上的反应将会显示在评论前
-  # The reactions for post will be shown before the comments
-  reactions: false
-  # 将元数据定期被发送到父页面（被嵌入的页面或控制台，用于调试）
-  # Metadata will be sent periodically to the parent window
-  emit: false
-  # 评论输入框的位置，可选值： top | bottom
-  # Aavilable value: top | bottom
-  # 讨论区帖子标题，可选值： pathname | url | title | og:title | 自定义
-  # Available values: pathname | url | title | og:title | custom
-  mapping: title
-  # 评论输入框的位置，可选值： top | bottom
-  # Aavilable value: top | bottom
-  inputPosition: top
-  # 主题可选值： light | light_high_contrast | light_protanopia | light_tritanopia | dark | dark_high_contrast | dark_protanopia | dark_tritanopia | dark_dimmed | transparent_dark | preferred_color_scheme
-  # Available values: light | light_high_contrast | light_protanopia | light_tritanopia | dark | dark_high_contrast | dark_protanopia | dark_tritanopia | dark_dimmed | transparent_dark | preferred_color_scheme
-  theme: preferred_color_scheme
+# giscus:
+#   # Github 仓库地址，格式：用户名/仓库名称
+#   # Github repository owner and name
+#   repo: username/repo-name
+#   # Giscus 生成的仓库 Id
+#   # Generate repository Id from Giscus
+#   repoId: #<repo-id>
+#   # 讨论区的分类名称
+#   # Github discussions category
+#   category: Comments
+#   # 讨论区分类 ID
+#   # Generate category Id from Giscus
+#   categoryId: #<category-id>
+#   # 帖子上的反应将会显示在评论前
+#   # The reactions for post will be shown before the comments
+#   reactions: false
+#   # 将元数据定期被发送到父页面（被嵌入的页面或控制台，用于调试）
+#   # Metadata will be sent periodically to the parent window
+#   emit: false
+#   # 评论输入框的位置，可选值： top | bottom
+#   # Aavilable value: top | bottom
+#   # 讨论区帖子标题，可选值： pathname | url | title | og:title | 自定义
+#   # Available values: pathname | url | title | og:title | custom
+#   mapping: title
+#   # 评论输入框的位置，可选值： top | bottom
+#   # Aavilable value: top | bottom
+#   inputPosition: top
+#   # 主题可选值： light | light_high_contrast | light_protanopia | light_tritanopia | dark | dark_high_contrast | dark_protanopia | dark_tritanopia | dark_dimmed | transparent_dark | preferred_color_scheme
+#   # Available values: light | light_high_contrast | light_protanopia | light_tritanopia | dark | dark_high_contrast | dark_protanopia | dark_tritanopia | dark_dimmed | transparent_dark | preferred_color_scheme
+#   theme: preferred_color_scheme
 
 
 # ---------------------------------------------------------------
