--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,7 +36,8 @@ keywords: 大数据,开发,技术
 # 不同尺寸站点图标
 # Different size of favicon
 favicon:
-  icon: /imgs/icons/favicon.ico
+  # icon: /imgs/icons/favicon.ico
+  icon: /imgs/yyqq188_avatar.jpeg
   small: /imgs/icons/favicon_16x16_next.png
   medium: /imgs/icons/favicon_32_32_next.png
   appleTouchIcon: /imgs/icons/apple_touch_icon_next.png
