--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,14 +36,10 @@ keywords: 大数据,开发,技术
 # 不同尺寸站点图标
 # Different size of favicon
 favicon:
-  # icon: /imgs/icons/favicon.ico
-  # small: /imgs/icons/favicon_16x16_next.png
-  # medium: /imgs/icons/favicon_32_32_next.png
-  # appleTouchIcon: /imgs/icons/apple_touch_icon_next.png
-  icon: /imgs/icons/yyqq188_avatar.jpeg
-  small: /imgs/icons/yyqq188_avatar.jpeg
-  medium: /imgs/icons/yyqq188_avatar.jpeg
-  appleTouchIcon: /imgs/icons/yyqq188_avatar.jpeg
+  icon: /imgs/icons/favicon.ico
+  small: /imgs/icons/favicon_16x16_next.png
+  medium: /imgs/icons/favicon_32_32_next.png
+  appleTouchIcon: /imgs/icons/apple_touch_icon_next.png
   
 
 # 自定义 Logo （目前只支持 Mist 页面模式）
